--- a/MENU LOP.html
+++ b/MENU LOP.html
@@ -1,27 +1,32 @@
 <script>
-  //all variables
-  /*
-  funções Main() para receber o primeiro salgado e determinar se o usuário quer mais de um, se sim,
+
+/*
+  funções Main() para receber o primeiro produto e determinar se o usuário quer mais de um, se sim,
   é chamada a função Multiple() para servir de carrinho.
 
   A função PayMent() é obvia, é onde fica as operações de troco e pagamento.
 
-  A função DumpCustomers() serve para saber quais salgados existem, sua quantidade e seu preço
-  caso a quantidade do salgado seja 0, ele imprimirá dizendo que acabou.
+  A função DumpCustomers() serve para saber quais produtos existem, sua quantidade e seu preço;
+  caso a quantidade do produto seja 0, ele imprimirá dizendo que acabou.
   */
 
-  var escolha, salg, qnt, recieved, troco, precoT=0, nEscolha, yesNo, text=" ", qntMain, salgMain, nEscolhaMain, find, choice,resultMulti=0,precoTmain=0;
-  var salgados=[{nome:"sorvete", preco:9, qnt:0}, {nome:"cacto", preco:5, qnt:15}, {nome:"boxer", preco:15, qnt:15}];
+  var escolha, salg, qnt, recieved, troco, precoT=0, nEscolha, yesNo, text=" ", qntMain, salgMain, nEscolhaMain, find, choice, resultMulti=0, precoTmain=0;
+
+  var salgados=[{nome:"Another World", preco:30, qnt:1},
+                {nome:"Super Driver", preco:30, qnt:15},
+                {nome:"Brigadeiro", preco:15, qnt:15}
+               ];
 
   while(escolha!=0){
-      escolha=parseInt(prompt("Digite 1 para compra de salgados[..]\n4 para adicionar produtos.\nDigite 0 para cancelar."));//tells the program what the user wants
+      //tells the program what the user wants
+      escolha=parseInt(prompt("Digite 1 para comprar algo[..]\n4 para adicionar produtos.\nDigite 0 para cancelar."));
 
       if(escolha==1){
           //resets variables
           salg=0, recieved=0, troco=0, precoT=0, nEscolha=0, qntMain=0, salgMain=0, nEscolhaMain=0, text="";
 
-          //asks which salgado the user wants
-          nEscolha=parseInt(prompt("Em número, qual salgado desejas?\nDigite 0 para cancelar\n\n"+DumpCustomers()));
+          //asks which produto the user wants
+          nEscolha=parseInt(prompt("Em número, qual produto desejas?\nDigite 0 para cancelar\n\n"+DumpCustomers()));
           //exits the program
           if(nEscolha==0){
               break;
@@ -33,27 +38,27 @@
           //to access the correct place of the vector
           nEscolha=nEscolha-1;
 
-          //checks if the salgado is available, prompts the user to input another salgado
+          //checks if the product is available, prompts the user to input another product
           if(salgados[nEscolha].qnt==0){
-              alert("Este salgado infelizmente acabou, escolha outro");
+              alert("Este produto infelizmente acabou, escolha outro");
           }
           //if it is available, enters else and calls function for buying
           else{
               Main();
           }
       }
-        //to edit salgados
+        //to edit products
         if(escolha==4){
-            find=parseInt(prompt("Digite 0 para adicionar um novo produto\nDigite o número de algum salgado\n"+DumpCustomers()));
+            find=parseInt(prompt("Digite 0 para adicionar um novo produto\nDigite o número de algum produto\n"+DumpCustomers()));
             //safegard
             while(find<0||find>salgados.length){
-                find=parseInt(prompt("Lembre-se, 0 para adicionar um novo produto\nDigite o número de algum salgado\n"+DumpCustomers()));
+                find=parseInt(prompt("Lembre-se, 0 para adicionar um novo produto\nDigite o número de algum produto\n"+DumpCustomers()));
             }
-            //find the cause of if not working when &&find<salgados.length
+
             if(find>=1){
                 //find -- for it to become our vector position
                 find--;
-                choice=parseInt(prompt("Você quer adicionar mais(1), remover(2) ou mudar o preço(3)?\nComo sempre, 0 para cancelar."));
+                choice=parseInt(prompt("Você quer adicionar mais(1), subtrair(2) ou mudar o preço(3)?\nComo sempre, 0 para cancelar."));
                 switch (choice)
                 {
                   //exits the program
@@ -70,9 +75,9 @@
                       break;
                   //subtracts products
                   case 2:
-                      qnt=parseInt(prompt("Quantos produtos desejas remover?"));
+                      qnt=parseInt(prompt("Quantas quantidades desejas remover?"));
                       while(qnt>salgados[find].qnt||qnt<0){
-                          qnt=parseInt(prompt("Desculpe, o valor ha de ser positivo e menor que a quantidade("+find+") desse salgado específico."));
+                          qnt=parseInt(prompt("Desculpe, o valor ha de ser positivo e menor que a quantidade("+find+") do(a) "+salgados[find].name+"."));
                       }
                       salgados[find].qnt-=qnt;
                       break;
@@ -90,9 +95,9 @@
                         choice=parseInt(prompt("Número errado. Para adicionar(1), remover(2) ou mudar o preço(3).\nComo sempre, 0 para sair."));
                     }
                 }
-            //to add a new salgado to the list
+            //to add a new product to the list
             }else if(find==0){
-                salgados.push({nome:prompt("Insira o nome do salgado."), preco:parseFloat(prompt("Insira o preço.")), qnt:parseInt(prompt("Insira a quantidade"))});
+                salgados.push({nome:prompt("Insira o nome do produto."), preco:parseFloat(prompt("Insira o preço.")), qnt:parseInt(prompt("Insira a quantidade"))});
                 escolha=parseInt(prompt("Deseja adicionar outro produto? Se sim, insira '4'.\nSe não, deixe em branco.\nPara cancelar, insira'0'."));
                 //safegard
                 while(escolha<0||escolha>4){
@@ -107,10 +112,10 @@
 
   function Main()
   {
-      //checks if the user's salgado exists
+      //checks if the user's product exists
       if(nEscolha>=0&&nEscolha<salgados.length){
 
-          //"Main" variables to keep the first salgado from the multiple ones, if there is
+          //"Main" variables to keep the first product from the multiple ones, if there is
           nEscolhaMain=nEscolha;
           salg=salgados[nEscolha].nome;
           salgMain=salgados[nEscolhaMain].nome;
@@ -118,7 +123,7 @@
           //how many salgs
           qntMain=parseInt(prompt("Quantos "+salgMain+" você desejas?"));
 
-          //checks if qnt of salgados is valid, if so, prompts to enter a valid qnt
+          //checks if qnt of products are valid, if so, prompts to enter a valid qnt
           while(qntMain>salgados[nEscolha].qnt||qntMain<=0||(qntMain==null&&qntMain=="")){
               qntMain=parseInt(prompt("Nao temos essa quantidade de "+salgMain+". Digite algo menor ou igual a "+salgados[nEscolha].qnt));
           }
@@ -150,7 +155,7 @@
           }
       }
   }
-  //function for the user to keep adding different kinds of salgado
+  //function for the user to keep adding different kinds of products
   function Multiple()
   {
       while(yesNo==1){
@@ -172,14 +177,14 @@
               //how many salgs
               qnt=parseInt(prompt("Quantos "+salg+" você desejas?"));
 
-              //checks if qnt of salgados is valid, if so, prompts to enter a valid qnt
+              //checks if qnt of products is valid, if so, prompts to enter a valid qnt
               while(qnt>salgados[nEscolha].qnt){
                   qnt=parseInt(prompt("Nao temos essa quantidade toda de "+salg+". Digite algo menor ou igual a "+salgados[nEscolha].qnt));
               }
 
               resultMulti=salgados[nEscolha].preco*qnt;
 
-              //text holds and indents the quantity and name of salgados
+              //text holds and indents the quantity and name of the products
 
               text=text+qnt+" "+salg+" R$"+resultMulti+"\n";
               precoT=precoT+resultMulti;
@@ -210,19 +215,19 @@
       alert("Seu troco é R$"+troco+"\nObrigado por comprar, amigão!");
   }
 
-  //to display the salgados and the quantity available
+  //to display the products and the quantity available
   function DumpCustomers()
   {
       var qualquer=" ", text=" ";
       for(var i=0; i<salgados.length; i++){
 
-          //usual display table of salgados, quantity and price
+          //usual display table of products, quantity and price
           if(salgados[i].qnt>0){
               qualquer=(i+1)+" para "+salgados[i].nome+"("+salgados[i].qnt+" restantes) - R$"+salgados[i].preco;
               text=text+qualquer+"\n";
           }
 
-          //in case one of the salgs runs out
+          //in case one of the products runs out
           else if(salgados[i].qnt<=0){
               qualquer=salgados[i].nome+" Acabou";
               text=text+qualquer+"\n";
