--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <html>
 <head>
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="https://github.com/processing/p5.js/releases/download/0.5.16/p5.js"></script>
   <script language="javascript" type="text/javascript" src="joguinho.js"></script>
 
-  <style> body {padding: 0; margin: 0;} </style>
+  <style> body {padding: 0; margin: 0; background-color:black;}</style>
 </head>
 
 <body>
