--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script language="javascript" type="text/javascript" src="https://github.com/processing/p5.js/releases/download/0.5.16/p5.js"></script>
   <script language="javascript" type="text/javascript" src="joguinho.js"></script>
 
-  <style> body {text-align:center; padding: 0; margin: 0; background-color:back;} </style>
+  <style> body { background-color:back;text-align:center; padding: 0; margin: 0;} </style>
 </head>
 
 <body>
