--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.dom.min.js></script>
   <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.sound.min.js></script>
   <script language="javascript" type="text/javascript" src="joguinho.js"></script>
-
-  <style> body {text-align:center; padding: 0; margin: 0; background-color:back;} </style>
 </head>
 
-<body>
+<body style="text-align:center; padding: 0; margin: 5% 0% 0% 0%; background-color:black;">
 </body>
 </html>
